Deleted unnecessary methods